@@ -1,3 +1,7 @@
+2010-08-06  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/transform.R: Removed convert_UTF_8(). Use enc2utf8() instead.
+
 2010-06-17  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/matrix.R (TermDocumentMatrix): If a dictionary is given do not
